--- a/scss/global-classes/_padding.scss
+++ b/scss/global-classes/_padding.scss
@@ -1,6 +1,9 @@
 // padding
 @use 'globalVariables.scss' as *;
 /* All sides padding */
+.p-sm {
+  padding: calc($rem / 3);
+}
 .p-1 {
     padding: $rem;
   }
