--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,6 @@ body {
   margin: 0;
 }
 
-img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
 header {
   margin: 0;
 }
@@ -62,6 +56,46 @@ header {
 .nav_bar_flotante {
   width: 100%;
   position: absolute;
+}
+
+.video-home {
+  background-color: #8EF186;
+  height: 300px;
+}
+
+footer img {
+  max-width: 250px;
+}
+
+ul {
+  list-style: none; /* Elimina los puntos o números de la lista */
+  margin: 0; /* Elimina el margen */
+  padding: 0; /* Elimina el relleno */
+}
+
+li {
+  margin: 0; /* Elimina el margen */
+  padding: 0; /* Elimina el relleno */
+}
+
+.whatapp-fixed {
+  position: fixed;
+  width: 50px;
+  right: 50px;
+  bottom: 50px;
+  z-index: 10000;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+.whatapp-fixed img {
+  width: 50px;
+  height: auto;
+  display: block;
+}
+.whatapp-fixed:hover {
+  width: 150px;
+  border-radius: 50px;
 }
 
 .title {
@@ -258,7 +292,231 @@ h3 {
   box-sizing: border-box;
 }
 
+.grid {
+  display: grid;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+.grid-cols-9 {
+  grid-template-columns: repeat(9, minmax(0, 1fr));
+}
+
+.grid-cols-10 {
+  grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+
+.grid-cols-11 {
+  grid-template-columns: repeat(11, minmax(0, 1fr));
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.col-span-1 {
+  grid-column: span 1/span 1;
+}
+
+.gap-0 {
+  gap: 0;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-9 {
+  gap: 2.25rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-11 {
+  gap: 2.75rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-24 {
+  gap: 6rem;
+}
+
+.gap-28 {
+  gap: 7rem;
+}
+
+.gap-32 {
+  gap: 8rem;
+}
+
+.gap-36 {
+  gap: 9rem;
+}
+
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-44 {
+  gap: 11rem;
+}
+
+.gap-48 {
+  gap: 12rem;
+}
+
+.gap-52 {
+  gap: 13rem;
+}
+
+.gap-56 {
+  gap: 14rem;
+}
+
+.gap-60 {
+  gap: 15rem;
+}
+
+.gap-64 {
+  gap: 16rem;
+}
+
+.gap-72 {
+  gap: 18rem;
+}
+
+.gap-80 {
+  gap: 20rem;
+}
+
+.gap-96 {
+  gap: 24rem;
+}
+
+.col-span-2 {
+  grid-column: span 2/span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3/span 3;
+}
+
+.col-span-4 {
+  grid-column: span 4/span 4;
+}
+
+.col-span-5 {
+  grid-column: span 5/span 5;
+}
+
+.col-span-6 {
+  grid-column: span 6/span 6;
+}
+
+.col-span-7 {
+  grid-column: span 7/span 7;
+}
+
+.col-span-8 {
+  grid-column: span 8/span 8;
+}
+
+.col-span-9 {
+  grid-column: span 9/span 9;
+}
+
+.col-span-10 {
+  grid-column: span 10/span 10;
+}
+
+.col-span-11 {
+  grid-column: span 11/span 11;
+}
+
+.col-span-12 {
+  grid-column: span 12/span 12;
+}
+
 /* All sides margin */
+.m-sm {
+  margin: 0.5rem;
+}
+
 .m-1 {
   margin: 1rem;
 }
@@ -416,6 +674,10 @@ h3 {
 }
 
 /* All sides padding */
+.p-sm {
+  padding: 0.3333333333rem;
+}
+
 .p-1 {
   padding: 1rem;
 }
@@ -604,6 +866,11 @@ h3 {
   background-size: 100% 100%;
 }
 
+.bg-2 {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(0deg, #477BA4 0%, #1D303F 100%);
+}
+
 /* Contenedor para el efecto de desenfoque */
 .bg-blur {
   position: relative;
@@ -638,6 +905,10 @@ h3 {
   background-attachment: fixed; /* Hace que la imagen se quede fija al hacer scroll */
 }
 
+.br-sm {
+  border-radius: 0.5rem;
+}
+
 .br-1 {
   border-radius: 1rem;
 }
@@ -656,6 +927,26 @@ h3 {
 
 .br-5 {
   border-radius: 5rem;
+}
+
+/* Border Right */
+.b-right-primary {
+  border-right: 1px #8EF186 solid;
+}
+
+/* Border Left */
+.b-left-primary {
+  border-left: 1px #8EF186 solid;
+}
+
+/* Border Top */
+.b-top-primary {
+  border-top: 1px #8EF186 solid;
+}
+
+/* Border Bottom */
+.b-bottom-primary {
+  border-bottom: 1px #8EF186 solid;
 }
 
 /* Flex container */
@@ -945,7 +1236,7 @@ label {
   font-size: 15px;
   padding: 10px 20px;
   border-radius: 50px;
-  display: inline-block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
   cursor: pointer;
@@ -979,6 +1270,96 @@ label {
   width: 100%;
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.356) 0%, rgba(243, 243, 233, 0) 50%, rgba(255, 255, 255, 0) 100%);
   z-index: 1000;
+}
+
+.nav_bar_flotante {
+  position: fixed;
+  top: -100px; /* Inicialmente oculta fuera de la vista */
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  transition: top 0.6s ease-in-out; /* Suaviza la animación */
+  position: fixed;
+  z-index: 1000;
+}
+.nav_bar_flotante img {
+  max-width: 200px;
+}
+.nav_bar_flotante button {
+  max-width: 300px !important;
+}
+
+/* Posiciones de los elementos */
+.static {
+  position: static;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.sticky {
+  position: sticky;
+  top: 0; /* O el valor que determines */
+}
+
+/* Posicionamiento específico */
+.top-0 {
+  top: 0;
+}
+
+.right-0 {
+  right: 0;
+}
+
+.bottom-0 {
+  bottom: 0;
+}
+
+.left-0 {
+  left: 0;
+}
+
+/* Ejemplos adicionales para ajustar la ubicación */
+.top-1 {
+  top: 0.25rem; /* 4px */
+}
+
+.right-1 {
+  right: 0.25rem; /* 4px */
+}
+
+.bottom-1 {
+  bottom: 0.25rem; /* 4px */
+}
+
+.left-1 {
+  left: 0.25rem; /* 4px */
+}
+
+/* Ejemplos para posicionamiento en valores completos */
+.top-full {
+  top: 100%;
+}
+
+.right-full {
+  right: 100%;
+}
+
+.bottom-full {
+  bottom: 100%;
+}
+
+.left-full {
+  left: 100%;
 }
 
 .logo img {
