--- a/scss/general.scss
+++ b/scss/general.scss
@@ -14,11 +14,11 @@ body{
     padding: 0;
     margin: 0;
 }
-img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
+// img {
+//     width: 100%;
+//     height: auto;
+//     display: block;
+// }
 header{
     margin: 0;
 }
@@ -42,8 +42,53 @@ header{
     transform: scale(1.06); /* Aumenta ligeramente el tamaño cuando se hace hover */
 
 }
+// HOME------------------------------------------>
 // navbar
 .nav_bar_flotante{
     width: 100%;
     position: absolute;
+}
+.video-home{
+    background-color: $primary;
+    height: 300px;
+}
+
+footer{
+    img{
+        max-width: 250px;
+    }
+}
+
+ul {
+    list-style: none; /* Elimina los puntos o números de la lista */
+    margin: 0;        /* Elimina el margen */
+    padding: 0;       /* Elimina el relleno */
+}
+
+li {
+    margin: 0;        /* Elimina el margen */
+    padding: 0;       /* Elimina el relleno */
+}
+// whatsapp contact info
+.whatapp-fixed{
+    position: fixed;
+    width: 50px;
+    right: 50px;
+    bottom: 50px;
+    z-index: 10000;
+    border-radius: 50px;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+
+    img{
+        width: 50px;
+        height: auto;
+        display: block;
+    }
+
+    &:hover{
+        width: 150px;
+        border-radius: 50px;
+       
+    }
 }
