--- a/scss/global-classes/_buttons.scss
+++ b/scss/global-classes/_buttons.scss
@@ -10,7 +10,7 @@
     font-size: 15px;
     padding: 10px 20px;
     border-radius: 50px;
-    display: inline-block;
+    display: block;
     // width: 50%;
     margin-left: auto;
     margin-right: auto;
