--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,8 @@
 @use 'global-classes/containers.scss' as *; 
 @use 'global-classes/inputs.scss' as *; 
 @use 'global-classes/buttons.scss' as *; 
+@use 'nav_bar_Flotante.scss' as *; 
+@use 'global-classes/position.scss' as *; 
 
 .logo img{
     max-width: 250px;
