--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,6 +16,7 @@
 @use 'global-classes/buttons.scss' as *; 
 @use 'nav_bar_Flotante.scss' as *; 
 @use 'global-classes/position.scss' as *; 
+@use 'projects.scss' as *; 
 
 .logo img{
     max-width: 250px;
