--- a/css/general.css
+++ b/css/general.css
@@ -98,4 +98,14 @@ li {
   border-radius: 50px;
 }
 
+a {
+  text-decoration: none; /* Elimina el subrayado */
+  color: inherit; /* Hereda el color del elemento padre */
+  margin: 0; /* Elimina márgenes */
+  padding: 0; /* Elimina rellenos */
+  border: none; /* Elimina bordes */
+  background: none; /* Elimina fondo */
+  outline: none; /* Elimina contorno en enfoque */
+}
+
 /*# sourceMappingURL=general.css.map */
