--- a/scss/general.scss
+++ b/scss/general.scss
@@ -92,3 +92,13 @@ li {
        
     }
 }
+
+a {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit;        /* Hereda el color del elemento padre */
+    margin: 0;             /* Elimina márgenes */
+    padding: 0;            /* Elimina rellenos */
+    border: none;          /* Elimina bordes */
+    background: none;      /* Elimina fondo */
+    outline: none;         /* Elimina contorno en enfoque */
+}
