--- a/scss/global-classes/_backgrounds.scss
+++ b/scss/global-classes/_backgrounds.scss
@@ -38,6 +38,21 @@
   background: rgb(2,0,36);
   background: linear-gradient(0deg, $light-blue 0%, $dark-blue 100%);
 }
+.bg-3{
+  background-image: linear-gradient(
+  200deg,
+  hsl(206deg 37% 18%) 0%,
+  hsl(197deg 73% 20%) 16%,
+  hsl(193deg 100% 21%) 30%,
+  hsl(189deg 100% 25%) 42%,
+  hsl(184deg 100% 27%) 53%,
+  hsl(178deg 100% 29%) 63%,
+  hsl(170deg 100% 33%) 73%,
+  hsl(162deg 100% 37%) 82%,
+  hsl(148deg 67% 49%) 91%,
+  hsl(115deg 70% 65%) 100%
+);
+}
 
 // 
   /* Contenedor para el efecto de desenfoque */
