--- a/scss/global-classes/_position.scss
+++ b/scss/global-classes/_position.scss
@@ -38,6 +38,9 @@
   }
   
   /* Ejemplos adicionales para ajustar la ubicación */
+  .top-0 {
+    top: 0; /* 4px */
+  }
   .top-1 {
     top: 0.25rem; /* 4px */
   }
