--- a/scss/general.scss
+++ b/scss/general.scss
@@ -14,11 +14,11 @@ body{
     padding: 0;
     margin: 0;
 }
-// img {
-//     width: 100%;
-//     height: auto;
-//     display: block;
-// }
+img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 header{
     margin: 0;
 }
@@ -34,12 +34,14 @@ header{
 // hover
 .hover-effect {
     transition: all 0.3s ease-in-out;
+    box-shadow: 0 1px 70px #8df18600;
+
     cursor: pointer;
 }
 
 .hover-effect:hover {
     box-shadow: 0 1px 70px #8df186a9;
-    transform: scale(1.06); /* Aumenta ligeramente el tamaño cuando se hace hover */
+    transform: scale(1.01); /* Aumenta ligeramente el tamaño cuando se hace hover */
 
 }
 // HOME------------------------------------------>
