--- a/scss/global-classes/_flexbox.scss
+++ b/scss/global-classes/_flexbox.scss
@@ -92,3 +92,23 @@
 .full-width {
   width: 100%;
 }
+// Altura
+.vh-100{
+  height: 100vh;
+}
+.vh-75{
+  height: 75vh;
+}
+.vh-50{
+  height: 50vh;
+}
+// Anmcho
+.vw-100{
+  height: 100vw;
+}
+.vw-75{
+  height: 75vw;
+}
+.vw-50{
+  height: 50vw;
+}
