--- a/scss/general.scss
+++ b/scss/general.scss
@@ -104,3 +104,7 @@ a {
     background: none;      /* Elimina fondo */
     outline: none;         /* Elimina contorno en enfoque */
 }
+
+.cursor-none{
+    cursor: none;
+}
