--- a/scss/general.scss
+++ b/scss/general.scss
@@ -71,6 +71,10 @@ li {
     margin: 0;        /* Elimina el margen */
     padding: 0;       /* Elimina el relleno */
 }
+p {
+    margin: 0;        /* Elimina el margen */
+    padding: 0;       /* Elimina el relleno */
+}
 // whatsapp contact info
 .whatapp-fixed{
     position: fixed;
