--- a/scss/global-classes/_position.scss
+++ b/scss/global-classes/_position.scss
@@ -48,7 +48,9 @@
   .right-1 {
     right: 0.25rem; /* 4px */
   }
-  
+  .bottom-0 {
+    bottom: 0 /* 4px */
+  }
   .bottom-1 {
     bottom: 0.25rem; /* 4px */
   }
